--- a/pose_extraction_mediapipe.ipynb
+++ b/pose_extraction_mediapipe.ipynb
@@ -7736,6 +7736,212 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generating ASL_landmarks CSV file\n"
+      ],
+      "metadata": {
+        "id": "C1ootSFK7K9S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "data_dir = \"/content/ASL_landmarks\"  # your folder\n",
+        "classes = sorted(os.listdir(data_dir))\n",
+        "rows = []\n",
+        "\n",
+        "for cls in classes:\n",
+        "    cls_folder = os.path.join(data_dir, cls)\n",
+        "    for file in os.listdir(cls_folder):\n",
+        "        if file.endswith(\".npy\"):\n",
+        "            file_path = os.path.join(cls_folder, file)\n",
+        "            landmarks = np.load(file_path)  # shape (21,3)\n",
+        "            flat_landmarks = landmarks.flatten()\n",
+        "            row = list(flat_landmarks) + [cls]  # add class label at the end\n",
+        "            rows.append(row)\n",
+        "\n",
+        "# Create column names\n",
+        "cols = []\n",
+        "for i in range(21):\n",
+        "    cols.extend([f\"x{i+1}\", f\"y{i+1}\", f\"z{i+1}\"])\n",
+        "cols.append(\"label\")  # last column\n",
+        "\n",
+        "# Create DataFrame\n",
+        "df = pd.DataFrame(rows, columns=cols)\n",
+        "\n",
+        "# Save to CSV\n",
+        "csv_path = \"/content/ASL_landmarks.csv\"\n",
+        "df.to_csv(csv_path, index=False)\n",
+        "print(\"CSV file saved at:\", csv_path)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-zZNDtjh6yS2",
+        "outputId": "dc74784c-85dd-42dd-ce5c-8fe52098050c"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CSV file saved at: /content/ASL_landmarks.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"All extracted landmark JPEG images are saved in: {OUT_IMG_DIR}\")\n",
+        "!ls {OUT_IMG_DIR}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EiOA8aFN7S8U",
+        "outputId": "207e678e-c3e7-4540-a415-ddfba4b94edb"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All extracted landmark JPEG images are saved in: /content/ASL_landmarks\n",
+            "A  C  del  F  H  J  L  N\tO  Q  S      T\tV  X  Z\n",
+            "B  D  E    G  I  K  M  nothing\tP  R  space  U\tW  Y\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Similarly we need to prepare Test datasets landmarks\n"
+      ],
+      "metadata": {
+        "id": "DAmFt1Ma8T68"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DATASET_DIR = \"/content/asl_alphabet_test/asl_alphabet_test\"   # your ASL dataset\n",
+        "OUT_IMG_DIR = \"/content/ASL_test_landmarks\"\n",
+        "\n",
+        "os.makedirs(OUT_IMG_DIR, exist_ok=True)\n"
+      ],
+      "metadata": {
+        "id": "SKngTP_B8Z9k"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget -O /content/hand_landmarker.task \\\n",
+        "https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e49e8588-cc4e-4d37-d427-f9998996c81b",
+        "id": "C4qN0HJj8rpI"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2026-01-28 00:13:43--  https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.98.207, 74.125.135.207, 74.125.142.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.98.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 7819105 (7.5M) [application/octet-stream]\n",
+            "Saving to: ‘/content/hand_landmarker.task’\n",
+            "\n",
+            "\r          /content/   0%[                    ]       0  --.-KB/s               \r/content/hand_landm 100%[===================>]   7.46M  --.-KB/s    in 0.03s   \n",
+            "\n",
+            "2026-01-28 00:13:43 (289 MB/s) - ‘/content/hand_landmarker.task’ saved [7819105/7819105]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "HAND_CONNECTIONS = [\n",
+        "    (0,1),(1,2),(2,3),(3,4),\n",
+        "    (0,5),(5,6),(6,7),(7,8),\n",
+        "    (0,9),(9,10),(10,11),(11,12),\n",
+        "    (0,13),(13,14),(14,15),(15,16),\n",
+        "    (0,17),(17,18),(18,19),(19,20)\n",
+        "]\n"
+      ],
+      "metadata": {
+        "id": "BR7qZ1KC8_WH"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def draw_hand_skeleton(canvas, landmarks, w, h):\n",
+        "    # draw connections\n",
+        "    for s, e in HAND_CONNECTIONS:\n",
+        "        x1, y1 = int(landmarks[s].x * w), int(landmarks[s].y * h)\n",
+        "        x2, y2 = int(landmarks[e].x * w), int(landmarks[e].y * h)\n",
+        "        cv2.line(canvas, (x1,y1), (x2,y2), (0,255,0), 3)\n",
+        "\n",
+        "    # draw joints\n",
+        "    for lm in landmarks:\n",
+        "        cx, cy = int(lm.x * w), int(lm.y * h)\n",
+        "        cv2.circle(canvas, (cx, cy), 5, (0,0,255), -1)\n"
+      ],
+      "metadata": {
+        "id": "Fk8tucN59MNV"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from mediapipe.tasks.python import vision\n",
+        "from mediapipe.tasks.python import BaseOptions # Directly import BaseOptions\n",
+        "\n",
+        "base_options = BaseOptions(\n",
+        "    model_asset_path=\"/content/hand_landmarker.task\"\n",
+        ")\n",
+        "\n",
+        "options = vision.HandLandmarkerOptions(\n",
+        "    base_options=base_options,\n",
+        "    num_hands=1\n",
+        ")\n",
+        "\n",
+        "detector = vision.HandLandmarker.create_from_options(options)"
+      ],
+      "metadata": {
+        "id": "NgBDC45D9Tr7"
+      },
+      "execution_count": 73,
+      "outputs": []
     }
   ]
 }
